syntax = "proto3";

package chat_api_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/ewik2k21/grpc_simple/pkg";

service ChatService {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message SendMessageRequest{
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message DeleteChatRequest{
  int64 id = 1;
}

message CreateChatRequest{
  repeated string usernames = 1;
}

message CreateChatResponse{
  int64 id = 1;
}